--- a/index-START.html
+++ b/index-START.html
@@ -58,6 +58,14 @@
       };
     }
 
+    const sliderImages = document.querySelectorAll('.side-in')
+
+    function checkSlide(e) {
+      console.log(e)
+    }
+
+    window.addEventListener('scroll', debounce(checkSlide));
+
   </script>
 
   <style>
